styles.css
/* Global CSS */

body{
    background-color: #f4ece7;
    color: #352F59;
    margin: 0;
    padding: 0;
}

h1{
    font-family: "filson-soft", sans-serif;
	font-weight: 700;
	font-style: normal;
}
p{
    font-family: "filson-soft", sans-serif;
	font-weight: 500;
	font-style: normal;
}
/* End of Global CSS */

/* Custom Navbar/Header CSS */

.nav-link-color {
    color: white;
    background-color: #A6496B;
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 5px;
    margin-bottom: 5px;
    border-radius: 5px;
}

.nav-link-color:hover {    
    color: #352f59;
    border: 1px solid #352F59;
    background-color: #f4ece7;
    text-decoration: underline;
}

.nav-link-text {
    padding-left: 10px;
    padding-right: 10px;
    font-family: "filson-soft", sans-serif;
	font-weight: 400;
	font-style: normal;
}

.raina-logo {
    max-height: 80px;
    height: 100%;
}

@media (max-width: 425px) {
    .raina-logo{
        max-height: 60px;
        height: 100%;
    }

    h1{
        font-family: "filson-soft", sans-serif;
        font-weight: 700;
        font-style: normal;
        font-size: 24px;
    }
}

@media (max-width: 375px) {
    .raina-logo{
        max-height: 40px;
        height: 100%;
    }

    h1{
        font-family: "filson-soft", sans-serif;
        font-weight: 700;
        font-style: normal;
        font-size: 20px;
    }
}

.navbar-bg-color{
    background-color: #F2C4B3;
}

.raina-name {
    text-decoration: none;
    color: #352F59;
}

/* End of Custom Navbar/Header CSS */

/* Custom Body CSS */

/* intro */
.raina-headshot {
    width: 100%;
    border: 3px solid #F2BB9B;
    border-radius: 5px;
    margin-top: 40px;
    padding: 5px;
}

.intro-container {
    margin-top: 20px;
    font-family: "filson-soft", sans-serif;
	font-weight: 500;
	font-style: normal;
}

.intro-h2{
    font-size: 60px;
}

@media (max-width: 320px) {
    .intro-h2{
        font-size: 50px;
    }
}
@media (max-width: 574px ) {
    .raina-headshot{
        margin-top: 20px;
    }
    
}
.intro-p{
    font-size: 24px;
}

/* works */
.works-title {
    margin: 0;
    padding-bottom: 40px;
    padding-left: 20px;
    font-size: 50px;
}
.works-bg-color {
    background-color: #F2BB9B;
    color: #352F59;
    font-family: "filson-soft", sans-serif;
}

.works-bg-color-2 {
    background-color: #352F59;
    color: #F2E0D5;
    font-family: "filson-soft", sans-serif;
}

@media (min-width: 1024px) {
    .works-bg-color-2 {
        background-image: url(images/blob-scene-haikei.svg);
        background-repeat: no-repeat;
        background-size: cover;
        font-family: "filson-soft", sans-serif;
        color: #352F59;
    }
}

.works-bg-color-3 {
    background-color: #f4ece7;
    color: #352F59;
}

.works-img {
    width: 100%;
    max-width: 100%;
    border-radius: 5px;
    margin-top: 20px;
}

.works-row-top {
    padding-top: 0;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 40px;
    font-family: "filson-soft", sans-serif;
	font-weight: 400;
	font-style: normal;
    font-size: 22px;
}

.works-row {
    padding-top: 40px;
    padding-bottom: 40px;
    font-family: "filson-soft", sans-serif;
	font-weight: 400;
	font-style: normal;
    font-size: 22px;
}
.tools{
    font-size:medium;
    margin-top: 40px;
}

.works-button-1 {
    border: 1px solid #352F59;
    background-color: #A6496B;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 20px;
    padding-right: 20px;
}

.works-button-2 {
    border: 1px solid #352F59;
    background-color: #A6496B;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 20px;
    padding-right: 20px;
}

.works-button-1:hover {
    border: 1px solid white;
    background-color: #F2BB9B;
    color: #352f59;
}

.works-button-2:hover{
    color: #352f59;
    border: 1px solid #352F59;
    background-color: #f4ece7;
}


/* start of project example css */
.project-link, .about-link{
    color:#A6496B;
}

.works-page-title {
    padding-top: 10px;
    margin-top: 20px;
}
.works-page-sub-title{
    font-family: "filson-soft", sans-serif;
	font-weight: 500;
	font-style: normal;
    font-size: 38px;
}

.works-page-link {
    padding-bottom: 10px;
}

.works-example-row-bottom {
    padding-bottom: 40px;
}

.works-example-card {
    margin-top: 20px;
}

/* card styles */
.card-title{
    font-family: "filson-soft", sans-serif;
    font-weight: 700;
    font-style: normal;
    color:#352F59;
}
.card-text{
    color:#352F59;
    font-size: 18px;
}
.card-tools{
    color: #352F59;
    padding-top: 10px;
    font-size: 14px;
}
/* end of project example css */

/* start of about me CSS */
.raina-headshot2 {
    width: 100%;
    border: 3px solid #F2BB9B;
    border-radius: 5px;
    margin-top: 20px;
}
.about-me-connect {
    text-align: center;
}

.about-title{
    margin-top: 20px;
    font-family: "filson-soft", sans-serif;
	font-weight: 500;
	font-style: normal;
    font-size: 40px;
}
.about-sub-title{
    font-family: "filson-soft", sans-serif;
	font-weight: 400;
	font-style: normal;
    font-size: 30px;

}
.about-sections{
    font-family: "filson-soft", sans-serif;
	font-weight: 500;
	font-style: normal;
    margin-top: 30px;
    text-decoration: underline;
}
.about-p{
    font-family: "filson-soft", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 20px;
}

.connect-cta{
    font-family: "filson-soft", sans-serif;
    font-weight: 500;
    font-style: normal;
    font-size: 24px;
    margin-top: 20px;
}
.download{
    font-family: "filson-soft", sans-serif;
    font-weight: 500;
    font-style: normal;
    font-size: 20px;
    border: 1px solid #352F59;
    background-color: #A6496B;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 20px;
    padding-right: 20px;
    margin-top: 10px;
}
.download:hover{
    border: 1px solid #352F59;
    background-color: #f4ece7;
    color: #352f59;
    text-decoration: underline;
}
small{
    font-size: 16px;
}

.about-connect-icons{
    color: #352f59;
    margin-left: 5px;
    margin-right: 5px;
}

.contact-line {
    color: #352f59;
}

@media (max-width: 1023px) {
    .contact-icon {
        display: none;
    }
}

@media (max-width: 1440px) {
    .contact-line {
        font-size: 16px;
        color: #352f59;
    }

    .about-title{
        margin-top: 16px;
        font-size: 20px;
        font-family: "filson-soft", sans-serif;
        font-weight: 500;
        font-style: normal;
    }

    .download {
        font-family: "filson-soft", sans-serif;
        font-weight: 500;
        font-style: normal;
        font-size: 16px;
        border: 1px solid #9795a4;
        background-color: #A6496B;
        color: white;
        text-decoration: none;
        border-radius: 5px;
        padding-top: 5px;
        padding-bottom: 5px;
        padding-left: 10px;
        padding-right: 10px;
        margin-top: 10px;
    }
}

/* end of about me CSS */
/* End of Custom Body CSS */

/* Start of Footer CSS */
@media (min-width: 768px) {
    .footer-contact-info {
        text-align: center;
    }
    
    .social-media-links {
        text-align: right;
    }    
}

.footer-colors {
    background-color: #352F59;
    color: white;
}

.footer-bg-wave-index {
    background-color: #F2BB9B;
}

.footer-icons{
    color: white;
}

/* End of Footer CSS */

